🩹 Fix screen overflow

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ sup {
   vertical-align: top;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 .inner {
   position: relative;
   max-width: 1020px;
